--- a/.circleci/circle.yml
+++ b/.circleci/circle.yml
@@ -7,12 +7,16 @@ general:
         - /home/ubuntu/Checkerz/app/build/outputs/apk/
 
 machine:
+    java:
+        version: oraclejdk8
     environment:
         ANDROID_HOME: /usr/local/android-sdk-linux
 
 dependencies:
+    pre:
+        - chmod +x gradlew
     override:
-        - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-24.3.4,android-24,extra-google-m2repository,extra-google-google_play_services,extra-android-support
+        - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-24.0.2,android-24,extra-google-m2repository,extra-google-google_play_services,extra-android-support
         - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
 
 test:
