--- a/circle.yml
+++ b/circle.yml
@@ -4,35 +4,20 @@
 
 general:
     artifacts:
-        - /home/ubuntu/Checkerz/app/build/outputs/apk/
+        - /home/ubuntu/your-app-name/app/build/outputs/apk/
 
 machine:
     environment:
         ANDROID_HOME: /usr/local/android-sdk-linux
-        GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError"'
-        _JAVA_OPTIONS: "-Xms512m -Xmx1024m"
-  java:
-    version: oraclejdk8
-    
+
 dependencies:
-    pre:
-        - echo y | android update sdk --no-ui --all --filter tools,platform-tools,android-26
-        - echo y | android update sdk --no-ui --all --filter build-tools-26.0.2
-        - echo y | android update sdk --no-ui --all --filter android-26
-        - echo y | android update sdk --no-ui --all --filter tools
-        - echo y | android update sdk --no-ui --all --filter extra-android-m2repository
-        - echo y | android update sdk --no-ui --all --filter extra-android-support
-        - echo y | android update sdk --no-ui --all --filter extra-google-google_play_services
-        - echo y | android update sdk --no-ui --all --filter extra-google-m2repository
     override:
+        - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-26.0.2,android-26,extra-google-m2repository,extra-google-google_play_services,extra-android-support
         - chmod +x gradlew
         - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
 
+
 test:
     override:
-        - chmod +x grailsw
-        - ./grailsw test-app --non-interactive
         - (./gradlew assemble):
             timeout: 360
-        # copy the build outputs to artifacts
-        - cp -r app/build/outputs $CIRCLE_ARTIFACTS 
