--- a/circle.yml
+++ b/circle.yml
@@ -18,5 +18,8 @@ dependencies:
 
 test:
     override:
-        - (./gradlew assemble):
+        - (./gradlew build --console=plain -PdisablePreDex):
             timeout: 360
+    post:
+        - mkdir -p $CIRCLE_TEST_REPORTS/junit/
+        - find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
